@@ -1,4 +1,4 @@
-DIST_SUBDIRS = gg irc jabber msn napster oscar toc yahoo zephyr icq
+DIST_SUBDIRS = gg irc jabber msn napster oscar toc yahoo zephyr
 
 if PRPLS
 
